--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <section class="hero">
         <div class="container hero__container">
           <header class="header">
-            <a href="/" class="logo">
+            <a href="./index.html" class="logo">
               <img src="./img/logo-1.png" alt="" class="logo__quiz">
             </a>
             <nav class="menu">
@@ -171,7 +171,7 @@
     <footer class="footer-container">
       <div class="container footer-container__content">
         <div class="footer">
-          <a href="/" class="logo">
+          <a href="./index.html" class="logo">
             <img src="./img/logo-1.png" alt="" class="logo__quiz">
           </a>
           <nav class="menu menu--footer">
