--- a/reviews.html
+++ b/reviews.html
@@ -12,7 +12,7 @@
     <section class="top-line">
       <div class="container container--top-line">
         <header class="header">
-          <a href="/" class="logo">
+          <a href="./index.html" class="logo">
             <img src="./img/logo-1.png" alt="" class="logo__quiz">
           </a>
           <nav class="menu">
@@ -246,7 +246,7 @@
         <footer class="footer-container">
           <div class="container footer-container__content">
             <div class="footer">
-              <a href="/" class="logo">
+              <a href="./index.html" class="logo">
                 <img src="./img/logo-1.png" alt="" class="logo__quiz">
               </a>
               <nav class="menu menu--footer">
