--- a/hello-page.html
+++ b/hello-page.html
@@ -10,7 +10,7 @@
 <body>
   <div class="wrapper wrapper--hello--page">
     <section class="hello">
-      <div class="container">
+      <div class="container hello__container">
         <div class="hello__block">
           <img src="./img/hello-logo.png" alt="" class="hello__logo">
           <div class="hello__btn">
